--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ http://www.templatemo.com/tm-511-journey
                                 <div class="tm-banner-header">
                                 <br><br><br><br><br>
                                 <br><br><br><br><br>
-                                    <p class="tm-banner-subtitle">Ճանապարհորդիր  մեց  հետ բացահաըտիր նոր ուղղություններ</p>
+                                    <p class="tm-banner-subtitle">Ճանապարհորդիր  մեզ  հետ բացահայտիր նոր ուղղություններ</p>
                                     <a href="javascript:void(0)" class="tm-down-arrow-link"><i class="fa fa-2x fa-angle-down tm-down-arrow"></i></a>       
                                 </div>    
                                 
@@ -115,7 +115,7 @@ http://www.templatemo.com/tm-511-journey
                         <h2 class="">Ինչ ենք մենք առաջարկում</h2>
                         <p>Մենք կազմակերպում ենք ամենօրյա խմբային և անհատական էքսկուրսիաներ,
 							 ուղևորափոխադրումներ,տրամադրում ենք որակավորված էքսկուրսավարի ծառայություններ, 
-							 կազմում ենք տուրիստական փաթեթներ, և այս ամենը Հայաստանի, Արցախի և Վրաստանի տարածքում։
+							 կազմում ենք տուրիստական փաթեթներ, և այս ամենը Հայաստանի և Վրաստանի տարածքում։
 							  Մեր հարմարավետ ավտոմեքենաները հագեցած են Wi-Fi սարքավորումներով և օդորակիչներով։</p>
                         
                     </div>
