--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ http://www.templatemo.com/tm-511-journey
                         <nav class="navbar navbar-expand-lg narbar-light">
                             <a class="navbar-brand mr-auto" href="#">
                                 <img src="img/mountains.png" alt="Site logo">
-                                Your_Tour
+                                AmazingTour
                             </a>
                             <button type="button" id="nav-toggle" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#mainNav" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
