--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ http://www.templatemo.com/tm-511-journey
                         <nav class="navbar navbar-expand-lg narbar-light">
                             <a class="navbar-brand mr-auto" href="#">
                                 <img src="img/mountains.png" alt="Site logo">
-                                AmazingTour
+                                Amazing_Tour
                             </a>
                             <button type="button" id="nav-toggle" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#mainNav" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
@@ -95,7 +95,7 @@ http://www.templatemo.com/tm-511-journey
                 <div class="container">
                     <div class="row">
                         <div class="col-xs-12 mx-auto tm-about-text-wrap text-center">                    
-                            <h4 class="text-uppercase mb-4"><strong>Your_Tour</strong> </h4>
+                            <h4 class="text-uppercase mb-4"><strong>Amazing_Tour</strong> </h4>
 <p>Սկսիր քո ճամփորդությունը մեզ հետ․ բացահայտիր նոր ուղղություններ, 
 							հանգստացիր հարմարավետ հյուրանոցներում, վայելիր հանգիստդ լիարժեք</p>
                                                           
