--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ http://www.templatemo.com/tm-511-journey
                     </li>
                     <li class="tm-tab-link-li">
                         <a href="#5a" data-toggle="tab" class="tm-tab-link">
-                            <img src="img/art-museum.png" alt="Image" class="img-fluid">
+                            <img src="img/icon-yerevan.png" alt="Image" class="img-fluid">
                         </a>
                     </li>
                     
