--- a/index.html
+++ b/index.html
@@ -181,17 +181,15 @@ http://www.templatemo.com/tm-511-journey
                             <div class="tm-recommended-place">
                                 <img src="img/garni-min-450x450.jpg" alt="Image" class="img-fluid tm-recommended-img">
                                 <div class="tm-recommended-description-box">
-                                    <h3 class="tm-recommended-title">Գառնի, Գեղարդ</h3>
+                                    <h3 class="tm-recommended-title">Գառնի</h3>
                                     <p class="tm-text-highlight">———————————————————————————————</p>
-                                    <p class="tm-text-gray">Կայցելեք Գառնու տաճար (77 մ.թ.), որը միակ հեթանոսական տաճարն է ողջ հետխորհրդային տարածքում: Այն տեղակայված է դեպի Ազատ գետի կիրճը նայող սարահարթի վրա: Տաճարը՝ իր շրջակա տարածքով, աներևակայելի գեղեցիկ է: Տաճարի հելլենիստական բաղնիքը, որի մանրահատակը պատրաստված է մոտ 30,000 բնական քարերի կտորներից։
-                                        Գեղարդի վանական համալիրը մեկ այլ պատմական վայր է, որի այցը նույնպես ներառված է այս շրջագայության մեջ:
-                                        Սուրբ Գեղարդը խորհրդանշում է այն նվիրական նիզակը, որով հռոմեացի հարյուրապետը խոցել է խաչված Քրիստոսի կողը, այնուհետև նիզակը բերվել է Հայաստան և պահվել է Գեղարդի վանքում: Այս համալիրի ամենազարմանալի մասը հենց ճարտարապետական լուծումն է՝ մի մեծ ժայռի մեջ փորված եկեղեցի, որը կառուցվել է՝ հաշվի առնելով հայկական ճարտարապետության բոլոր կանոնները:
-                                        
+                                    <p class="tm-text-gray">Կայցելեք Գառնու տաճար (77 մ.թ.), որը միակ հեթանոսական տաճարն է ողջ հետխորհրդային տարածքում:
                                         </p>   
                                 </div>
                                 <a href="#" class="tm-recommended-price-box">
-                                    <p class="tm-recommended-price">35․000</p>
-                                    <p class="tm-recommended-price-link">դրամ</p>
+					 <img src="img/" alt="Image" class="img-fluid">
+                                    <p class="tm-recommended-price"></p>
+                                    <p class="tm-recommended-price-link"></p>
                                 </a>                        
                             </div>
 
@@ -204,8 +202,8 @@ http://www.templatemo.com/tm-511-journey
                                          Ճոպանուղիով ուղևորվելու ընթացքում կտեսնեք Հարսանաձորի դիտակետը և Սատանի Կամուրջը՝ գետի վրայով անցնող բնական կամուրջ՝ ձևավորված սառած լավային զանգվածներից։</p>   
                                 </div>
                                 <a href="#" class="tm-recommended-price-box">
-                                    <p class="tm-recommended-price">90․000</p>
-                                    <p class="tm-recommended-price-link">դրամ</p>
+                                    <p class="tm-recommended-price"></p>
+                                    <p class="tm-recommended-price-link"></p>
                                 </a>
                             </div>    
 
@@ -221,8 +219,8 @@ http://www.templatemo.com/tm-511-journey
                                         Դուք կարող եք անվճար այցելել Զվարթնոցի արգելոց-թանգարան Երևան Քարտով:</p>   
                                 </div>
                                 <a href="#" class="tm-recommended-price-box">
-                                    <p class="tm-recommended-price">35․000</p>
-                                    <p class="tm-recommended-price-link">դրամ</p>
+                                    <p class="tm-recommended-price"></p>
+                                    <p class="tm-recommended-price-link"></p>
                                 </a>
                             </div> 
 
@@ -245,8 +243,8 @@ http://www.templatemo.com/tm-511-journey
                                          Սևանավանքում է գտնվում Հայաստանի ամենագեղեցիկ խաչքարերից մեկը՝ «Ամենափրկիչ»-ը: Սա Հիսուսի մասին պատմող 13 հազվագյուտ խաչքարերից մեկն է:</p>   
                                 </div>
                                 <a href="#" class="tm-recommended-price-box">
-                                    <p class="tm-recommended-price">50․000</p>
-                                    <p class="tm-recommended-price-link">դրամ</p>
+                                    <p class="tm-recommended-price"></p>
+                                    <p class="tm-recommended-price-link"></p>
                                 </a>                        
                             </div>
                             <div class="tm-recommended-place">
@@ -258,8 +256,8 @@ http://www.templatemo.com/tm-511-journey
                                          Կտեսնեք հիասքանչ ջրվեժը, որը նման է ջրահարսի մազերի և, իհարկե, կայցելեք հանքային ջրերի գալերեա և կփորձեք Ջերմուկի հանքային ջրերը, որոնք ունեն տարբեր ջերմաստիճաններ։ Ամենատաք աղբյուրի ջուրը 53 աստիճան է։</p>   
                                 </div>
                                 <a href="#" class="tm-recommended-price-box">
-                                    <p class="tm-recommended-price">60․000</p>
-                                    <p class="tm-recommended-price-link">դրամ</p>
+                                    <p class="tm-recommended-price"></p>
+                                    <p class="tm-recommended-price-link"></p>
                                 </a>
                             </div>
 
@@ -273,8 +271,8 @@ http://www.templatemo.com/tm-511-journey
                                 </div>
                                 <div id="preload-hover-img"></div>
                                 <a href="#" class="tm-recommended-price-box">
-                                    <p class="tm-recommended-price">50․000</p>
-                                    <p class="tm-recommended-price-link">դրամ</p>
+                                    <p class="tm-recommended-price"></p>
+                                    <p class="tm-recommended-price-link"></p>
                                 </a>
                             </div>
                         </div>                        
@@ -299,7 +297,7 @@ http://www.templatemo.com/tm-511-journey
                                 </div>
                                 <a href="#" class="tm-recommended-price-box">
                                     <p class="tm-recommended-price"></p>
-                                    <p class="tm-recommended-price-link">դրամ</p>
+                                    <p class="tm-recommended-price-link"></p>
                                 </a>                        
                             </div>
 
@@ -314,7 +312,7 @@ http://www.templatemo.com/tm-511-journey
                                 </div>
                                 <a href="#" class="tm-recommended-price-box">
                                     <p class="tm-recommended-price"></p>
-                                    <p class="tm-recommended-price-link">դրամ</p>
+                                    <p class="tm-recommended-price-link"></p>
                                 </a>
                             </div>
 
@@ -330,7 +328,7 @@ http://www.templatemo.com/tm-511-journey
                                 </div>
                                 <a href="#" class="tm-recommended-price-box">
                                     <p class="tm-recommended-price"></p>
-                                    <p class="tm-recommended-price-link">դրամ</p>
+                                    <p class="tm-recommended-price-link"></p>
                                 </a>
                             </div>
 
