--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ http://www.templatemo.com/tm-511-journey
                                         </p>   
                                 </div>
                                 <a href="#" class="tm-recommended-price-box">
-					 
+					  <img src="img/icon-yerevan.png" alt="Image" class="img-fluid">
                                     <p class="tm-recommended-price"></p>
                                     <p class="tm-recommended-price-link"></p>
                                 </a>                        
