--- a/index.html
+++ b/index.html
@@ -237,12 +237,13 @@ http://www.templatemo.com/tm-511-journey
                             <div class="tm-recommended-place">
                                 <img src="img/tm-img-06.jpg" alt="Image" class="img-fluid tm-recommended-img">
                                 <div class="tm-recommended-description-box">
-                                    <h3 class="tm-recommended-title">Դիլիջան, Սևան</h3>
+                                    <h3 class="tm-recommended-title">Դիլիջան</h3>
                                     <p class="tm-text-highlight">———————————————————————————————</p>
-                                    <p class="tm-text-gray">Մայրաքաղաք Երևանից ավտոմեքենայով ընդամենը 1 ժամ հեռավորության վրա գտնվում է Սևանա լիճը՝ ծովի մակարդակից 1900 մ բարձրության վրա՝ շրջապատված մեծ լեռնաշղթայով: Ձեզ սպասվում է լճի չնաշխարհիկ տեսարան թերակղզու բարձունքից, որտեղ նաև կայցելեք Սևանավանք։ Այն կառուցվել է 9-րդ դարում իշխանուհի Մարիամի կողմից՝ իր վաղամեռիկ ամուսնու հիշատակին։
-                                         Սևանավանքում է գտնվում Հայաստանի ամենագեղեցիկ խաչքարերից մեկը՝ «Ամենափրկիչ»-ը: Սա Հիսուսի մասին պատմող 13 հազվագյուտ խաչքարերից մեկն է:</p>   
+                                    <p class="tm-text-gray">Դիլիջան հանգստավայրային և առողջարանային բնակավայր Համարվում է Հայաստանի ամենանշանավոր հանգստավայրերից մեկը:
+					    Որը անմիջականորեն հարում է «Դիլիջան ազգային պարկ» բնության հատուկ պահպանվող տարածքին։</p>   
                                 </div>
                                 <a href="#" class="tm-recommended-price-box">
+					<img src="img/temple.png" alt="Image" class="img-fluid">
                                     <p class="tm-recommended-price"></p>
                                     <p class="tm-recommended-price-link"></p>
                                 </a>                        
