--- a/index.html
+++ b/index.html
@@ -251,12 +251,14 @@ http://www.templatemo.com/tm-511-journey
                             <div class="tm-recommended-place">
                                 <img src="img/tm-img-05.jpg" alt="Image" class="img-fluid tm-recommended-img">
                                 <div class="tm-recommended-description-box">
-                                    <h3 class="tm-recommended-title">Խոր վիրապ, Նորավանք, Ջերմուկ</h3>
+                                    <h3 class="tm-recommended-title">Ջերմուկ</h3>
                                     <p class="tm-text-highlight">———————————————————————————————</p>
-                                    <p class="tm-text-gray">Այս շրջագայության ընթացքում կուղևորվեք նաև Ջերմուկ քաղաք-հանգստավայրը։
-                                         Կտեսնեք հիասքանչ ջրվեժը, որը նման է ջրահարսի մազերի և, իհարկե, կայցելեք հանքային ջրերի գալերեա և կփորձեք Ջերմուկի հանքային ջրերը, որոնք ունեն տարբեր ջերմաստիճաններ։ Ամենատաք աղբյուրի ջուրը 53 աստիճան է։</p>   
+                                    <p class="tm-text-gray">
+                                         Կտեսնեք Ջերմուկ հիասքանչ ջրվեժը, որը նման է ջրահարսի մազերի և, իհարկե, կայցելեք հանքային ջրերի գալերեա և կփորձեք Ջերմուկի հանքային ջրերը, որոնք ունեն տարբեր ջերմաստիճաններ։
+					    Ամենատաք աղբյուրի ջուրը 53 աստիճան է։</p>   
                                 </div>
                                 <a href="#" class="tm-recommended-price-box">
+					<img src="img/waterfall.png" alt="Image" class="img-fluid">
                                     <p class="tm-recommended-price"></p>
                                     <p class="tm-recommended-price-link"></p>
                                 </a>
