--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ http://www.templatemo.com/tm-511-journey
 					    Որը անմիջականորեն հարում է «Դիլիջան ազգային պարկ» բնության հատուկ պահպանվող տարածքին։</p>   
                                 </div>
                                 <a href="#" class="tm-recommended-price-box">
-					<img src="img/forest.png" alt="Image" class="img-fluid">
+					<img src="img/icon.png" alt="Image" class="img-fluid">
                                     <p class="tm-recommended-price"></p>
                                     <p class="tm-recommended-price-link"></p>
                                 </a>                        
@@ -258,7 +258,7 @@ http://www.templatemo.com/tm-511-journey
 					    Ամենատաք աղբյուրի ջուրը 53 աստիճան է։</p>   
                                 </div>
                                 <a href="#" class="tm-recommended-price-box">
-					<img src="img/waterfall.png" alt="Image" class="img-fluid">
+					<img src="img/icon.png" alt="Image" class="img-fluid">
                                     <p class="tm-recommended-price"></p>
                                     <p class="tm-recommended-price-link"></p>
                                 </a>
