--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ http://www.templatemo.com/tm-511-journey
                                         </p>   
                                 </div>
                                 <a href="#" class="tm-recommended-price-box">
-					  <img src="img/temple.png" alt="Image" class="img-fluid">
+					  <img src="img/icon.png" alt="Image" class="img-fluid">
                                     <p class="tm-recommended-price"></p>
                                     <p class="tm-recommended-price-link"></p>
                                 </a>                        
@@ -267,13 +267,15 @@ http://www.templatemo.com/tm-511-journey
                             <div class="tm-recommended-place">
                                 <img src="img/tm-img-07.jpg" alt="Image" class="img-fluid tm-recommended-img">
                                 <div class="tm-recommended-description-box">
-                                    <h3 class="tm-recommended-title">Խոր վիրապ, Նորավանք</h3>
+                                    <h3 class="tm-recommended-title">Խոր վիրապ</h3>
                                     <p class="tm-text-highlight">———————————————————————————————</p>
-                                    <p class="tm-text-gray">Երևանից մոտ մեկ ժամ հեռավորության վրա գտնվող Խոր Վիրապ վանքից բացվում է մի հեքիաթային տեսարան դեպի Հայաստանը խորհրդանշող Արարատը: «Խոր Վիրապ» թարգմանվում է որպես «խորը բանտ», որը կառուցվել է թագավորական նախկին բանտից։ Հենց այս բանտում էր փակված 13 տարի Գրիգոր Լուսավորիչը՝ առաջին Հայոց կաթողիկոսը:
-                                         Բացի այդ, ինչպես նշեցինք, սա Արարատ լեռանը ամենամոտ կետն է և շատ հաճախ Հայաստան այցելելու առաջին պատճառն է։</p>   
+                                    <p class="tm-text-gray">Երևանից մոտ մեկ ժամ հեռավորության վրա գտնվող Խոր Վիրապ վանքից բացվում է մի հեքիաթային տեսարան դեպի Հայաստանը խորհրդանշող Արարատը: 
+					    «Խոր Վիրապ» թարգմանվում է որպես «խորը բանտ», որը կառուցվել է թագավորական նախկին բանտից։ Հենց այս բանտում էր փակված 13 տարի Գրիգոր Լուսավորիչը՝ առաջին Հայոց կաթողիկոսը:
+                              </p>   
                                 </div>
                                 <div id="preload-hover-img"></div>
                                 <a href="#" class="tm-recommended-price-box">
+					 <img src="img/icon.png" alt="Image" class="img-fluid">
                                     <p class="tm-recommended-price"></p>
                                     <p class="tm-recommended-price-link"></p>
                                 </a>
