--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ http://www.templatemo.com/tm-511-journey
                             <div class="tm-recommended-place">
                                 <img src="img/tm-img-04.jpg" alt="Image" class="img-fluid tm-recommended-img">
                                 <div class="tm-recommended-description-box">
-                                    <h3 class="tm-recommended-title">Խոր վիրապ, Նորավանք, Տաթև</h3>
+                                    <h3 class="tm-recommended-title">Խոր վիրապ, , Տաթև</h3>
                                     <p class="tm-text-highlight">———————————————————————————————</p>
                                     <p class="tm-text-gray">Այս ուղևորության ընթացքում կտեսնեք նաև աշխարհի ամենաերկար ճոպանուղին (մոտ 6 կմ), որը 2010 թ.-ին գրանցվել է Գինեսի գրքում: Տաթևի թևերը* ձեզ կտանեն դեպի 9-րդ դարի Տաթևի վանք, որը ժամանակին եղել է Հայաստանի կրթական և հոգևոր կենտրոնը: Այն կառուցվել Որոտան գետի աջափնյա եզրին՝ շրջապատված բարձր լեռներով և խիտ անտառներով:
                                          Ճոպանուղիով ուղևորվելու ընթացքում կտեսնեք Հարսանաձորի դիտակետը և Սատանի Կամուրջը՝ գետի վրայով անցնող բնական կամուրջ՝ ձևավորված սառած լավային զանգվածներից։</p>   
